--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,10 @@
 .App {
   text-align: center;
+  display: flex;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #6252a2;
+  width: 50%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +14,50 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.content{
+  width: 50%;
+  background-color: #eff1f6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card{
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  height: 50%;
+}
+.card > h1{
+  margin-top: -10px;
+  margin-right: auto;
+}
+.card > p{
+  margin-top: -10px;
+  margin-right: auto;
+}
+
+span{
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  border-radius: 2px;
+  background-color: #e6e7ef;
+}
+input{
+  width: 100%;
+  height: 45px;
+  outline: none;
+  border: none;
+  border-radius: 2px;
+  background: #e8ebed;
+  color: #576366;
+  font-size: 24px;
+  margin-bottom: 5px;
+}
+::placeholder {
+  padding-left: 20px;
+  font-size: 15px;
 }
